2008-09-08  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/data/GeoDataGeometry.h
    * src/lib/geodata/data/GeoDataMultiGeometry.{h|cpp}
    * src/lib/geodata/data/GeoDataMultiObject.h

    add a new Type for GeoDataObject*
    forbid copying of GeoDataMultiGeometry

2008-09-05  Pino Toscano    <pino@kde.org>

    * src/lib/HttpJob.{cpp,h}:

    Move the private data into a d-pointer.

2008-08-31  Pino Toscano    <pino@kde.org>

    * src/lib/MarbleNetworkPlugin.{cpp,h}:
    * src/lib/MarbleNetworkPluginInterface.h:
    * src/lib/HttpJob.{cpp,h}:
    * src/lib/QHttpNetworkPlugin.{cpp,h}:
    * src/lib/HttpDownloadManager.{cpp,h}:
    * src/lib/CMakeLists.txt:

    - add a structure for network plugins, interface and abstract class.
    - decouple the QHttp stuff into an own QHttpNetworkPlugin, compiled
      statically, and leave HttpJob and abstract class.
    - start adapting the HttpDownloadManager to use a network plugin for
      creating the HTTP jobs; at the moment no plugin is used, but the static
      QHttp-based one is.

2008-08-30  Pino Toscano    <pino@kde.org>

    * src/lib/HttpFetchFile.{cpp,h}:
    * src/lib/HttpJob.{cpp,h}:

    Rename HttpFetchFile.{cpp,h} into HttpJob.{cpp,h}.

2008-08-30  Pino Toscano    <pino@kde.org>

    * src/lib/HttpFetchFile.{cpp,h}:
    * src/lib/HttpDownloadManager.{cpp,h}:

    Merge HttpJob and HttpFetchFile into the former.

2008-08-24  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/data/GeoDataContainer.{h|cpp}
    * src/lib/geodata/data/GeoDataDocument.{h|cpp}
    * src/lib/MarbleGeoDataModel.{h|cpp}

    make GeoDataDocuments be unloadable
    This means that tiles can be unloaded each by each

2008-08-20  Simon Schmeisser  <mail_to_wrt@gmx.de>

    * src/lib/MarbleGeoDataModel.h
    * src/lib/MarbleGeoDataModel.cpp
    * src/lib/geodata/handlers/kml/KmlLineStringTagHandler.cpp
    * src/lib/geodata/handlers/kml/KmlMarblePlacemarkTagHandler.cpp